# my-TDD-learning

./: CMakeLists.txt  CharUtil.cpp  CharUtil.h  CharUtilTest.cpp  Soundex.h  StringUtil.cpp  StringUtil.h  StringUtilTest.cpp
cp2-10-test-fixture/: CMakeLists.txt  SoundexFixtureTest.cpp
cp2-11-split-out-test-Soundex/: Soundex.h  SoundexTest.cpp
cp2-22-dicitonary/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
cp2-35-testing-outside-box/: Soundex.h  SoundexTest.cpp
cp2-39-finsh-up/: Soundex.h  SoundexTest.cpp
cp2-9/: CMakeLists.txt  SoundexTest.cpp
